--- a/UI/index.html
+++ b/UI/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Questioner - Homepage</title>
+	<title>Questioner</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body>
 	<div class="container">
@@ -20,9 +20,11 @@
 			Other users can vote on asked questions and they bubble to the top or bottom of the log.
 		</p>
 		<br><br>
-		<button><a href="sign in.html">SIGN IN</a></button>
+		<button><a href="admin_sign_in.html">SIGN IN AS ADMIN</a></button>
 		<br><br>
-		<button><a href="sign up.html">SIGN UP</a></button>
+		<button><a href="user_sign_in.html">SIGN IN AS USER</a></button>
+		<br><br>
+		<button><a href="user_sign_up.html">SIGN UP</a></button>
 		<br>
 	</div>
 </body>
