--- a/UI/admin_sign_in.html
+++ b/UI/admin_sign_in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Questioner - Sign In</title>
+	<title>Admin - Sign In</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -13,23 +13,16 @@
 				USERNAME
 			</label>
 			<br><br>
-			<input type="text" name="username" required>
+			<input type="text" name="username">
 			<br><br>
 			<label>
 				PASSWORD
 			</label>
 			<br><br>
-			<input type="password" name="password" required>
+			<input type="password" name="password">
 			<br><br>
-			<button type="submit">SIGN IN</button>
-			<br><br><br>
-			<p>
-				Forgot password? <a href="password reset.html">Reset here</a> 
-			</p>
-			<br><br>
-			<p>
-				Don't have an account? <a href="sign up.html">Sign Up here</a> 
-			</p>
+			<button><a href="admin_dashboard.html">SIGN IN</a></button>
+			<br>
 		</form>
 	</div>
 </body>
