--- a/UI/password_reset.html
+++ b/UI/password_reset.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Questioner - Password Reset </title>
+	<title>Password Reset </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -17,9 +17,9 @@
 				EMAIL 
 			</label>
 			<br><br>
-			<input type="email" name="username" required>
+			<input type="email" name="username">
 			<br><br>
-			<button type="submit">RESET</button>
+			<button><a href="password_reset_response.html">RESET</a></button>
 		</form>
 	</div>
 </body>
