--- a/UI/user_sign_up.html
+++ b/UI/user_sign_up.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Questioner - Sign Up</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body>
 	<div class="container">
@@ -14,7 +14,7 @@
 					FIRSTNAME
 				</label>
 				<br><br>
-				<input type="text" name="firstname" required>
+				<input type="text" name="firstname">
 				<br><br>
 			</div>
 			<div class="float-right">
@@ -22,7 +22,7 @@
 					LASTNAME
 				</label>
 				<br><br>
-				<input type="text" name="lastname" required>
+				<input type="text" name="lastname">
 				<br><br>
 			</div>
 			<div class="float-left">
@@ -38,7 +38,7 @@
 					USERNAME
 				</label>
 				<br><br>
-				<input type="text" name="email" required>
+				<input type="text" name="email">
 				<br><br>
 			</div>
 			<div class="float-left">
@@ -46,7 +46,7 @@
 					PHONE NUMBER
 				</label>
 				<br><br>
-				<input type="text" name="email" required>
+				<input type="text" name="email">
 				<br><br>
 			</div>
 			<div class="float-right">
@@ -54,7 +54,7 @@
 					EMAIL
 				</label>
 				<br><br>
-				<input type="email" name="email" required>
+				<input type="email" name="email">
 				<br><br>
 			</div>
 			<div class="float-left">
@@ -62,7 +62,7 @@
 					PASSWORD
 				</label>
 				<br><br>
-				<input type="password" name="password" required>
+				<input type="password" name="password">
 				<br><br>
 			</div>
 			<div class="float-right">
@@ -70,14 +70,14 @@
 					CONFIRM PASSWORD
 				</label>
 				<br><br>
-				<input type="password" name="password-confirmation" required>
+				<input type="password" name="password-confirmation">
 				<br><br>
 			</div>
 				<br><br>
-				<button class="btn-102" type="submit">SIGN UP</button>
+				<button class="btn-102"><a href="user_sign_up_response.html">SIGN UP</a></button>
 				<br><br><br>
 				<p>
-					Already have an account? <a href="sign in.html">Sign In here</a> 
+					Already have an account? <a href="user_sign_in.html">Sign In here</a> 
 				</p>
 		</form>
 	</div>
