--- a/UI/index.html
+++ b/UI/index.html
@@ -20,11 +20,11 @@
 			Other users can vote on asked questions and they bubble to the top or bottom of the log.
 		</p>
 		<br><br>
-		<button><a href="admin_sign_in.html">SIGN IN AS ADMIN</a></button>
+		<button><a href="html/admin_sign_in.html">SIGN IN AS ADMIN</a></button>
 		<br><br>
-		<button><a href="user_sign_in.html">SIGN IN AS USER</a></button>
+		<button><a href="html/user_sign_in.html">SIGN IN AS USER</a></button>
 		<br><br>
-		<button><a href="user_sign_up.html">SIGN UP</a></button>
+		<button><a href="html/user_sign_up.html">SIGN UP</a></button>
 		<br>
 	</div>
 </body>
