--- a/UI/index.html
+++ b/UI/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Questioner</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-	<div class="container">
-		<h1>QUESTIONER</h1><br>
-		<p>
-			Crowd-source questions for a meetup. ​
-		</p>
-		<br>
-		<p>
-			Questioner​ helps the meetup organizer prioritize questions to be answered.
-		</p>
-		<br>
-		<p>
-			Other users can vote on asked questions and they bubble to the top or bottom of the log.
-		</p>
-		<br><br>
-		<button><a href="html/admin_sign_in.html">SIGN IN AS ADMIN</a></button>
-		<br><br>
-		<button><a href="html/user_sign_in.html">SIGN IN AS USER</a></button>
-		<br><br>
-		<button><a href="html/user_sign_up.html">SIGN UP</a></button>
-		<br>
-	</div>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <title>Questioner - Home</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="img/questioner-icon-3.png"/>
+  </head>
+  <body>
+      <div class="container">
+          <h1 class="title">Questioner</h1>
+        <div class="sub-container">
+          <p class="description">Questioner​ helps the meetup organizer prioritize questions to be answered</p>
+          <div class="get-started">
+              <a href="html/sign-in-and-sign-up.html" class="action-button shadow">Get Started</a>
+          </div>
+      </div>
+      </div>
+  </body>
 </html>
