[chore] added dashboard link to the sign in button

--- a/UI/html/sign-in-and-sign-up.html
+++ b/UI/html/sign-in-and-sign-up.html
@@ -38,7 +38,7 @@
                                 </fieldset>
                                 <div class="forms_buttons">
                                   <button type="button" class="forms_buttons-forgot" id="trigger">Forgot Password?</button>
-                                  <input type="submit" value="Sign In" class="forms_buttons-action" id="sign-in-button">
+                                  <button class="forms_buttons-action" id="sign-in-button"><a href="dashboard.html">Sign In</a></button>
                                 </div>
                               </form>
                             </div>
