--- a/html/sign-in-and-sign-up.html
+++ b/html/sign-in-and-sign-up.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Questioner - Account</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" type="image/png" href="../img/questioner-icon-3.png"/>
+    <link rel="shortcut icon" type="image/png" href="../IMG/questioner-icon-3.png"/>
   </head>
   <body>
       <div class="container">
